// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkButton renders correctly when not passed props 1`] = `
<div>
  <a
    class="component"
    href="/"
  >
    Link
  </a>
</div>
`;

exports[`LinkButton renders correctly when passed props 1`] = `
<div>
  <a
    class="component"
    href="/mypath"
  >
    My Path
  </a>
</div>
`;
